--- a/index.html
+++ b/index.html
@@ -19,19 +19,77 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section data-markdown>
-          <textarea data-template>
-    # Navigating Uncertainities
 
-    ---
-    ## A Brief Recap
-    ---
-    ## The Deductions
-	---
-	## ..so far
-  </textarea
-          >
+        <section data-markdown># Navigating Uncertainities</section>
+        <section data-markdown>## A Brief Recap
+
+![Warnings over the months](./over_months.png)
         </section>
+        <section>
+          <section data-markdown>## The Deductions so far
+
+|   |  |  |  |  |
+|---|---|---|---|---|
+| October '23 | ₹3,700 | €40.21 | £34.89 | $44.45 |
+| December '23 | ₹3,700 | €40.21 | £34.89 | $44.45 |
+| **Total (so far)** | **₹7,400** | **€80.42** | **£69.78** | **$88.90** |
+|||||
+
+
+</section>
+          <section data-markdown>### Relative Equivalent per month
+
+
+| | | | |
+|-|-|-|-|
+|12 plates of &#127858; | 2 Sundays eatout with 👨‍👩‍👧‍👦 |  | 1 listed share of TCS|
+
+
+
+~ 3.2% of my monthly pay
+
+
+
+          </section>
+
+        </section>
+<section>
+          <section><h2>Some Questions</h2>
+<p class="fragment fade-out"><s>Should I look forward to get refund?</s></p>
+
+<p class="fragment"> 1. Deductions are Retrospective effect? </br> > Expect 11 more installments? </p>
+</section>
+          <section><h2> It's more than just the money </h2>
+1. How far will it be affecting my appraisal?
+          </br>
+<p class="fragment">2. More than the appraisal, "the Rumour" is true?</p>
+
+
+         </section>
+
+
+
+        </section>
+
+        <section data-markdown># The Intention
+My intention is not to,
+  * waste your time rambling about my situation
+  * hurt/blame anyone
+
+Trying to explain my situation, as best as I can.
+
+        </section>
+
+        <section data-markdown># The End
+Looking forward to
+* Directives
+* Course Correction
+* Feedback
+
+
+        </section>
+
+
       </div>
     </div>
 
@@ -48,6 +106,7 @@
 
         // Learn about plugins: https://revealjs.com/plugins/
         plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
+        slideNumber: true
       });
     </script>
   </body>
