--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>reveal.js</title>
+    <title>Navigating Uncertainities</title>
 
     <link rel="stylesheet" href="dist/reset.css" />
     <link rel="stylesheet" href="dist/reveal.css" />
@@ -42,7 +42,7 @@
 
 | | | | |
 |-|-|-|-|
-|12 plates of &#127858; | 2 Sundays eatout with 👨‍👩‍👧‍👦 |  | 1 listed share of TCS|
+|12 plates of &#127858; | 2 Sundays eatout with 👨‍👩‍👧‍👦 |  | 1 listed share of the 🏢|
 
 
 
@@ -55,14 +55,15 @@
         </section>
 <section>
           <section><h2>Some Questions</h2>
-<p class="fragment fade-out"><s>Should I look forward to get refund?</s></p>
+<p class="fragment fade-in-then-out">Should I look forward to get refund?</p>
+<p class="fragment fade-in"><s>Should I look forward to get refund?</s></p>
 
 <p class="fragment"> 1. Deductions are Retrospective effect? </br> > Expect 11 more installments? </p>
 </section>
           <section><h2> It's more than just the money </h2>
-1. How far will it be affecting my appraisal?
-          </br>
-<p class="fragment">2. More than the appraisal, "the Rumour" is true?</p>
+<p class="fragment fade-in">1. How far will it be affecting my appraisal? </p>
+
+<p class="fragment fade-in">2. More than the appraisal, "the Rumour" is true?</p>
 
 
          </section>
