:pencil: Removed vertical slides to improve readability

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 ![Warnings over the months](./over_months.png)
         </section>
-        <section>
+        <!-- <section> -->
           <section data-markdown>## The Deductions so far
 
 |   |  |  |  |  |
@@ -52,8 +52,8 @@
 
           </section>
 
-        </section>
-<section>
+        <!-- </section> -->
+<!-- <section> -->
           <section><h2>Some Questions</h2>
 <p class="fragment fade-in-then-out">Should I look forward to get refund?</p>
 <p class="fragment fade-in"><s>Should I look forward to get refund?</s></p>
@@ -70,7 +70,7 @@
 
 
 
-        </section>
+        <!-- </section> -->
 
         <section data-markdown># The Intention
 My intention is not to,
