:art: Fixed icons

--- a/index.html
+++ b/index.html
@@ -37,21 +37,47 @@
 
 
 </section>
-          <section data-markdown>### Relative Equivalent per month
+          <!-- <section data-markdown>### Relative Equivalent per month
 
 
 | | | | |
 |-|-|-|-|
-|12 plates of &#127858; | 2 Sundays eatout with 👨‍👩‍👧‍👦 |  | 1 listed share of the 🏢|
-
+|12 </br> plates of &#127858; | Eatout with 👨‍👩‍👧‍👦 for 2 days |  | 1 listed share of the 🏢|
 
 
 ~ 3.2% of my monthly pay
 
 
 
-          </section>
+          </section> -->
 
+                    <section><h3> Relative Equivalent per month </h3>
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-8afn{border-color:inherit;font-size:xx-large;text-align:left;vertical-align:top}
+.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+<thead>
+  <tr>
+    <td class="tg-8afn"><p style="font-size:60px; text-align: center;">12</p><br> Plates of <br><p style="text-align: center"> &#127858; </p> </td>
+    <td class="tg-8afn"> <p style="font-size:60px; text-align: center;">2</p><br> Days of eatout with <br>  <p style="text-align: center"> 👨‍👩‍👧‍👦 </p> </td>
+    <td class="tg-8afn"><p style="font-size:60px; text-align: center;">1</p> <br>  Listed share of the <br> <p style="text-align: center"> 🏢 </p> </td>
+  </tr>
+</thead>
+</table>
+
+<br>
+<br>
+~ 3.2% of my monthly pay
+
+
+
+          </section>
         <!-- </section> -->
 <!-- <section> -->
           <section><h2>Some Questions</h2>
@@ -61,9 +87,9 @@
 <p class="fragment"> 1. Deductions are Retrospective effect? </br> > Expect 11 more installments? </p>
 </section>
           <section><h2> It's more than just the money </h2>
-<p class="fragment fade-in">1. How far will it be affecting my appraisal? </p>
+<p class="fragment fade-in">1. How far will it be affecting my appraisal - <em>Career progress</em>? </p>
 
-<p class="fragment fade-in">2. More than the appraisal, "the Rumour" is true?</p>
+<p class="fragment fade-in">2. More than the appraisal, how true <em>"the Rumour"</em> is?</p>
 
 
          </section>
