:hammer: Added new slides

--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
       <div class="slides">
 
         <section data-markdown># Navigating Uncertainities</section>
+
+        <section data-markdown># The Intention
+My intention is not to,
+  * waste your time rambling about my situation
+  * hurt/blame anyone
+
+I'm trying to explain my situation, as best as I can.
+
+        </section>
         <section data-markdown>## A Brief Recap
 
 ![Warnings over the months](./over_months.png)
         </section>
         <!-- <section> -->
-          <section data-markdown>## The Deductions so far
+        <section data-markdown>## The Deductions so far
 
 |   |  |  |  |  |
 |---|---|---|---|---|
@@ -37,21 +46,7 @@
 
 
 </section>
-          <!-- <section data-markdown>### Relative Equivalent per month
-
-
-| | | | |
-|-|-|-|-|
-|12 </br> plates of &#127858; | Eatout with 👨‍👩‍👧‍👦 for 2 days |  | 1 listed share of the 🏢|
-
-
-~ 3.2% of my monthly pay
-
-
-
-          </section> -->
-
-                    <section><h3> Relative Equivalent per month </h3>
+        <section><h3> Relative Equivalent per month </h3>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
@@ -78,40 +73,83 @@
 
 
           </section>
-        <!-- </section> -->
-<!-- <section> -->
+        <section><h2> A thought experiment</h2>
+
+<p class="fragment fade-in">
+<img src="pdf.jpg" alt="Paystub">
+
+</p>
+
+<p class="fragment fade-in"> One liner with a reason for deduction <em>could have been better</em></p>
+
+</section>
           <section><h2>Some Questions</h2>
 <p class="fragment fade-in-then-out">Should I look forward to get refund?</p>
 <p class="fragment fade-in"><s>Should I look forward to get refund?</s></p>
 
-<p class="fragment"> 1. Deductions are Retrospective effect? </br> > Expect 11 more installments? </p>
+<p class="fragment"> Observed Pattern: The deductions follows Retrospective effect  </p>
+<p class="fragment"> Future Course:  Should I expect 11 more installments?  </p>
 </section>
-          <section><h2> It's more than just the money </h2>
+<section><h2> It's more than just the money </h2>
 <p class="fragment fade-in">1. How far will it be affecting my appraisal - <em>Career progress</em>? </p>
 
 <p class="fragment fade-in">2. More than the appraisal, how true <em>"the Rumour"</em> is?</p>
 
 
-         </section>
+</section>
+
+<section> <h2>Coffee Badging</h2>
+
+<p class="fragment fade-in">
+<img src="coffee-badging.png" alt="Coffee Badging">
+
+</p>
+
+</section>
+<section> <h2>Coffee Badging</h2>
+
+<p class="fragment fade-in"> Coffee badging leads to mediocrity  </p>
+
+<p class="fragment fade-in"> Survival is not enough;  I want to thrive
+<img src="thriving.jpg" alt="Thriving">
+
+</p>
 
 
 
-        <!-- </section> -->
 
-        <section data-markdown># The Intention
-My intention is not to,
-  * waste your time rambling about my situation
-  * hurt/blame anyone
+</section>
 
-Trying to explain my situation, as best as I can.
 
-        </section>
 
-        <section data-markdown># The End
-Looking forward to
+      <section><h2>Sorry ≠ Shame </h2>
+
+I'm sorry,
+<ul>
+  <li>if I've put you through uncomfortable situation</li>
+  <li>if I failed to maintain professional decorum </li>
+  <li>if I'm not crisp</li>
+  <li>if I couldn't convey my message</li>
+</ul>
+
+
+      </section>
+
+<section data-markdown>## Lets  excel together
+
+
+Looking forward to your,
 * Directives
 * Course Correction
 * Feedback
+
+
+</section>
+
+
+      <section data-markdown># Thanks for your time
+
+
 
 
         </section>
