:pencil: Added FAQs

--- a/index.html
+++ b/index.html
@@ -121,8 +121,38 @@ I'm trying to explain my situation, as best as I can.
 </section>
 
 
+  <section> <h2>FAQ</h2>
+<h4>1. Office is best place for work. When'll you realise?</h4>
+<p class="fragment fade-in"> I'm 100% with you.   </p>
+    <h4>2. You're taking advantage of lockdown. What were you doing before that?</h4>
+<p class="fragment fade-in"> I was working from office. I'm wasn't asking WFH, I was asking for seats.  </p>
 
-      <section><h2>Sorry ≠ Shame </h2>
+    <!-- <h4>3. Why don't you pursue for refund of deductions?</h4>
+<p class="fragment fade-in"> I wish its refunded. But by not pursuing, I'm ruling out uncertainity.  </p>
+
+    <h4>4. Once returning to offshore, are you going to abide by RTO?</h4>
+<p class="fragment fade-in"> Most likely yes!  </p> -->
+
+  </section>
+
+    <section> <h2>FAQ - continued</h2>
+<!-- <h4>1. Office is best place for work. When'll you realise?</h4>
+<p class="fragment fade-in"> I'm 100% with you.   </p>
+    <h4>2. You're taking advantage of lockdown. What were you doing before that?</h4>
+<p class="fragment fade-in"> I was working from office. I'm wasn't asking WFH, I was asking for seats.  </p> -->
+
+    <h4>3. Why don't you pursue for refund of deductions?</h4>
+<p class="fragment fade-in"> I wish its refunded. But by not pursuing, I'm ruling out uncertainity.  </p>
+
+    <h4>4. Once returning to offshore, are you going to abide by RTO?</h4>
+<p class="fragment fade-in"> Most likely yes!  </p>
+
+    <h4>5. When this imapcts appraisal, how are you planning to handle?</h4>
+<p class="fragment fade-in"> No idea :(   </p>
+
+  </section>
+
+        <section><h2>Sorry ≠ Shame </h2>
 
 I'm sorry,
 <ul>
