--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ I'm trying to explain my situation, as best as I can.
 <!-- <h4>1. Office is best place for work. When'll you realise?</h4>
 <p class="fragment fade-in"> I'm 100% with you.   </p>
     <h4>2. You're taking advantage of lockdown. What were you doing before that?</h4>
-<p class="fragment fade-in"> I was working from office. I'm wasn't asking WFH, I was asking for seats.  </p> -->
+<p class="fragment fade-in"> I was working from office. I'm not asking for WFH, I am asking for seats.  </p> -->
 
     <h4>3. Why don't you pursue for refund of deductions?</h4>
 <p class="fragment fade-in"> I wish its refunded. But by not pursuing, I'm ruling out uncertainity.  </p>
